<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_host"
        android:inputType="text"
        android:key="mqtt_host_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_host"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_rx"
        android:inputType="text"
        android:key="mqtt_topic_rx"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_topic_rx" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_tx"
        android:inputType="text"
        android:key="mqtt_topic_tx"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_topic_tx" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_message_start"
        android:inputType="text"
        android:key="mqtt_message_start"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_message_start"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_message_reset"
        android:inputType="text"
        android:key="mqtt_message_reset"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_message_reset" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_message_kill"
        android:inputType="text"
        android:key="mqtt_message_kill"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_message_kill" />



</PreferenceScreen>
